# API_check-in_aerolinea

./: .gitignore  Procfile  README.md  build.sh  pyproject.toml
aerolinea/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  urls.py  views (copia).py  views.py
datos_DB/: airline_dump.sql
datos_DB/datos_db/: create_tables.sql  original_airline.sql
datos_DB/datos_db/csv/: airplane.csv  boarding_pass.csv  flight.csv  passenger.csv  purchase.csv  seat.csv  seat_type.csv
utils/: views.py
